base/src/test/resources/failure/struct/missing-field.aya.txt
In file $FILE:7:2 ->

  5 |   
  6 |   def make-pair (A B : Type) (a : A) (b : B) : Pair A B =>
  7 |     new Pair A B { }
    |     ^--------------^

Error: Missing field(s): `fst`, `snd`

1 error(s), 0 warning(s).
What are you doing?
